add public files

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="entry">
-    <h1>{{title}}</h1>
-    <div class="content">
-        {{content}}
+    <h1 class="nes-balloon from-left nes-pointer">{{title}}</h1>
+    <div class="nes-container is-rounded">
+        <p>{{content}}</p>
     </div>
 </div>
