--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>Example of how to render HTML from Node using Express</title>
+    <link href="nes.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     {{{body}}}
-    <footer>
-        <hr>
+    <footer class="nes-container is-rounded is-dark">
         <p>This content will appear on all pages. &copy; iO Academy</p>
     </footer>
 </body>
